k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ci-cd-demo
  labels:
    name: ci-cd-demo
    environment: production
